--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     </header>
     <main>
         <div class="card">
-            card
+            <span>Harry Potter and the Philosopher's Stone</span>
+            <span>J. K. Rowling</span>
+            <span>223 pages</span>
+            <button class="read">Read</button>
+            <button class="del">Delete</button>
         </div>
         <div class="card">
             card
@@ -52,15 +56,21 @@
 
     <dialog>
         <h2>Add new book</h2>
-        <input name="title" type="text" placeholder="Title">
-        <input name="author" type="text" placeholder="Author">
-        <input name="pages" type="number" placeholder="Pages">
-        <div class="read">
-            <label for="read">Finished?</label>
-            <input name="read" type="checkbox">
-        </div>
-        <button class="add">Add book</button>
-        <button class="close">Close</button>
+
+        <form>
+            <input name="title" type="text" placeholder="Title">
+            <input name="author" type="text" placeholder="Author">
+            <input name="pages" type="number" placeholder="Pages">
+            <div class="read">
+                <label for="read">Finished?</label>
+                <input name="read" type="checkbox">
+            </div>
+
+            <menu>
+                <button class="add">Add book</button>
+                <button class="cancel" formmethod="dialog">Cancel</button>
+            </menu>
+        </form>
     </dialog>
 
     <script src="script.js"></script>
