Add append to myLibrary array, display from it

--- a/index.html
+++ b/index.html
@@ -12,40 +12,13 @@
         <h1>Library</h1>
         <button class="addMenu">Add book</button>
     </header>
-    <main>
+    <main class="books-grid">
         <div class="card">
-            <span>Harry Potter and the Philosopher's Stone</span>
-            <span>J. K. Rowling</span>
-            <span>223 pages</span>
+            <span class="title">Harry Potter and the Philosopher's Stone</span>
+            <span class="author">J. K. Rowling</span>
+            <span class="pages">223 pages</span>
             <button class="read">Read</button>
             <button class="del">Delete</button>
-        </div>
-        <div class="card">
-            card
-        </div>
-        <div class="card">
-            card
-        </div>
-        <div class="card">
-            card
-        </div>
-        <div class="card">
-            card
-        </div>
-        <div class="card">
-            card
-        </div>
-        <div class="card">
-            card
-        </div>
-        <div class="card">
-            card
-        </div>
-        <div class="card">
-            card
-        </div>
-        <div class="card">
-            card
         </div>
     </main>
 
