Convert Book to class

--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
         <button class="addMenu">Add book</button>
     </header>
     <main class="books-grid">
-        <div class="card">
-            <span class="title">Harry Potter and the Philosopher's Stone</span>
-            <span class="author">J. K. Rowling</span>
-            <span class="pages">223 pages</span>
-            <button class="read">Read</button>
-            <button class="del">Delete</button>
-        </div>
     </main>
 
     <footer>
@@ -34,9 +27,9 @@
             <input name="title" type="text" placeholder="Title">
             <input name="author" type="text" placeholder="Author">
             <input name="pages" type="number" placeholder="Pages">
-            <div class="read">
-                <label for="read">Finished?</label>
-                <input name="read" type="checkbox">
+            <div class="isRead">
+                <label for="isRead">Finished?</label>
+                <input name="isRead" type="checkbox">
             </div>
 
             <menu>
